# audiobookify

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_REVIEW.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  PLAN.md  README.md  ROADMAP.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.claude/hooks/: post-commit-push-reminder.sh  pre-commit-lint.sh
.github/workflows/: ci.yml
.serena/: project.yml
.serena/memories/: lessons_learned.md  session_2024_tui_improvements.md  session_handoff_testing_infrastructure.md  session_handoff_v260_tui_enhancements.md
calibre_plugin/: README.md  __init__.py  build_plugin.sh  config.py  dialog.py  ui.py
claudedocs/: ARCHITECTURE_REFACTOR.md  DIRECTORY_SYSTEM.md  SETTINGS_PANEL_REDESIGN.md  TESTING_STRATEGY.md  TUI_DESIGN_DECISIONS.md  TUI_FEATURES_DESIGN.md  TUI_REVIEW.md
epub2tts_edge/: __init__.py  audio_generator.py  audio_normalization.py  batch_processor.py  chapter_detector.py  chapter_selector.py  config.py  content_filter.py  epub2tts_edge.py  errors.py  job_manager.py  logger.py  mobi_parser.py  multi_voice.py  pause_resume.py  pronunciation.py  silence_detection.py  tui.py  voice_preview.py
epub2tts_edge/core/: __init__.py  events.py  job_queue.py  output_naming.py  pipeline.py  profiles.py
epub2tts_edge/tui/: __init__.py  app.py
epub2tts_edge/tui/handlers/: __init__.py  event_adapter.py
epub2tts_edge/tui/models/: __init__.py  multi_preview_state.py  preview_state.py  voice_status.py
epub2tts_edge/tui/panels/: __init__.py  file_panel.py  jobs_panel.py  log_panel.py  multi_job_progress.py  preview_panel.py  progress_panel.py  queue_panel.py  settings_panel.py
epub2tts_edge/tui/screens/: __init__.py  directory_browser.py  help_screen.py  profile_dialog.py
examples/: pronunciation.json  pronunciation.txt  voice_mapping.json
tests/: conftest.py  test_audio_normalization.py  test_batch_processor.py  test_chapter_detector.py  test_chapter_selector.py  test_config.py  test_content_filter.py  test_e2e_workflow.py  test_event_bus.py  test_integration.py  test_job_manager.py  test_job_queue.py  test_mobi_parser.py  test_multi_job_progress.py  test_multi_preview.py  test_multi_voice.py  test_output_naming.py  test_pause_resume.py  test_pipeline.py  test_preview_export.py  test_profiles.py  test_pronunciation.py  test_silence_detection.py  test_test_mode.py  test_tts_connectivity.py  test_tts_params.py  test_tui_workflows.py  test_voice_preview.py
tests/fixtures/: On Cosmopolitanism and Forgiveness (Derrida, Jacques) (2001) (Z-Library).epub  Specters of Marx (Jacques Derrida, Peggy Kamuf etc.) (1994) (Z-Library).epub  The Gift of Death  Literature in Secret Second Edition (Jacques Derrida, David Wills) (2017) (Z-Library).epub  The Politics of Friendship (Jacques Derrida) (2020) (Z-Library).epub  Writing and Difference (Jacques Derrida, Alan Bass) (2017) (Z-Library).epub  __init__.py  epub_factory.py
tests/mocks/: __init__.py  tts_mock.py
