[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "audiobookify"
version = "2.3.0"
description = "Convert EPUB and MOBI/AZW files to M4B audiobooks using Microsoft Edge TTS"
readme = "README.md"
license = {text = "GPL-3.0"}
requires-python = ">=3.11"
authors = [
    {name = "Christopher Aedo", email = "c@aedo.dev"},
]
maintainers = [
    {name = "loganrooks", email = "loganrooks@users.noreply.github.com"},
]
keywords = [
    "audiobook",
    "epub",
    "mobi",
    "kindle",
    "tts",
    "text-to-speech",
    "edge-tts",
    "m4b",
    "ebook",
    "converter",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Text Processing :: General",
]
dependencies = [
    "beautifulsoup4",
    "ebooklib",
    "edge-tts",
    "lxml",
    "mobi",
    "mutagen",
    "nltk",
    "pillow",
    "pydub",
    "textual>=0.40.0",
    "tqdm",
    # audioop was removed in Python 3.13, pydub needs this backport
    "audioop-lts; python_version >= '3.13'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "pytest-asyncio",
    "black",
    "ruff",
    "mypy",
]
all = [
    "audiobookify[dev]",
]

[project.scripts]
audiobookify = "epub2tts_edge:main"
abfy = "epub2tts_edge:main"
audiobookify-tui = "epub2tts_edge:tui_main"
abfy-tui = "epub2tts_edge:tui_main"

[project.urls]
Homepage = "https://github.com/loganrooks/audiobookify"
Documentation = "https://github.com/loganrooks/audiobookify#readme"
Repository = "https://github.com/loganrooks/audiobookify.git"
Issues = "https://github.com/loganrooks/audiobookify/issues"
Changelog = "https://github.com/loganrooks/audiobookify/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["epub2tts_edge*"]

[tool.setuptools.package-data]
epub2tts_edge = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by black)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.isort]
known-first-party = ["epub2tts_edge"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
